# PEAK6-Meridian

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  UNDERSTANDING.md  package-lock.json  vercel.json
app/: next.config.ts  package-lock.json  package.json  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/create-markets/: route.ts
app/app/api/settle-markets/: route.ts
app/app/dashboard/: page.tsx
app/app/history/: page.tsx
app/app/markets/: page.tsx
app/app/portfolio/: page.tsx
app/app/trade/[market]/: page.tsx
app/components/: CountdownTimer.tsx  MarketCard.tsx  Navbar.tsx  OrderBook.tsx  PortfolioView.tsx  TradePanel.tsx  UsdcFaucet.tsx  WalletProvider.tsx
app/lib/: constants.ts  empty-module.ts  idl.json  utils.ts
app/lib/idl/: meridian.json  meridian.ts
programs/meridian/: Cargo.toml
programs/meridian/src/: errors.rs  lib.rs  state.rs
programs/meridian/src/instructions/: add_strike.rs  cancel_order.rs  create_market.rs  init_escrows.rs  init_orderbook.rs  init_registry.rs  initialize.rs  merge_pair.rs  mint_pair.rs  mod.rs  pause.rs  place_order.rs  redeem.rs  register_market.rs  settle.rs
scripts/: create-markets.ts  create-today.ts  demo-lifecycle.ts  deploy.sh  seed-orders.ts  settle-markets.ts  setup-devnet.ts
tests/: meridian.ts
