[package]
name = "meridian"
version = "0.1.0"
description = "Binary Stock Outcome Markets on Blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# Pin crates that published edition2024 builds (incompatible with Solana's Cargo 1.79)
constant_time_eq = "=0.3.1"
